# CH-Bin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: check.yml  ci.yml
bin_x/: bin_x.py
bin_x/analysis/: ground_truth.py  metrics.py
bin_x/cli/: analysis.py  clustering.py  features.py  utils.py
bin_x/core/: utils.py
bin_x/core/clustering/: algorithm.py  distance_matrix.py  dump_bins.py  hull_distance.py  positive_def.py  solve_qp.py
bin_x/core/convex_hull/: algorithm.py  cli.py  distance.py  pos_def.py  solve_qp.py
bin_x/core/features/: kmer_count.py  preprocess.py  scm_gene.py
ch_bin/: ch_bin.py
ch_bin/cli/: clustering.py  features.py  utils.py
ch_bin/core/: config.py  utils.py
ch_bin/core/clustering/: algorithm.py  distance_matrix.py  hull_distance.py  positive_def.py  solve_qp.py
ch_bin/core/features/: coverage.py  kmer_count.py  preprocess.py  scm_gene.py
config/: default.ini
docs/: conf.py  index.rst
docs/posts/: execution.md  installation.md  setup.md
tools/: .gitignore
